- added regex expression in Find dialog - fixed bug with regex expression in Find dialog (didn't quote) - improved caret jump to position by centering text - extract rule now consider token limit instead of character limit - inline rule now parenthesize the rule if it contains more than one token
[git-p4: depot-paths = "//depot/code/antlrworks/main/": change = 1979]